# hrcapacity

./: .gitignore  .pre-commit-config_yaml  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
artifacts_samples/run_example/: capacity_by_role_period.csv  capacity_detail.csv  capacity_gap_by_role_period.csv  demand_by_role_period.csv  demand_event_detail.csv  manifest.json  scenario_summary.csv  totals.csv  utilization_by_role_period.csv
configs/: base.yaml
data/: capacity_schedule.csv  events_config.csv  fixed_event_counts.csv  routing_matrix.csv  workforce_forecast.csv
src/hr_capacity_model/: __init__.py  cli.py  config.py  data_io.py  governance.py  run.py  step1_spec.py  step2_demand.py  step3_capacity.py  step4_scenarios.py  validate.py  validate_cli.py
src/hr_capacity_model/core/: settings.py
src/hr_capacity_model/decision/: guardrails.py  pressure_index.py
src/hr_capacity_model/orchestration/: pipeline.py
src/hr_capacity_model/reporting/: manifest.py  run_io.py
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_pressure_index.py
