[project]
name = "hr-capacity-model"
version = "0.1.0"
description = "Decision-grade HR Capacity Model (Steps 1-3)"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyyaml>=6.0"
]

[project.scripts]
hrcm = "hr_capacity_model.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
